# code

./: aav_nginx_conf
backend/test/: CMakeLists.txt  a.out  audio.py  change.py  hhh.txt  main.cc  oo.py  sprintf.c  test  test.c  video.py
backend/video_/: CMakeLists.txt  aav_server.conf  main.cc
backend/video_/api/: api_analysis_messages.cc  api_analysis_messages.h  api_files_list.cc  api_files_list.h  api_get_search_log.cc  api_get_search_log.h  api_list_loop.cc  api_list_loop.h  api_login.cc  api_login.h  api_register.cc  api_register.h  api_search.cc  api_search.h  api_search_log.cc  api_search_log.h  api_update_user_history.cc  api_update_user_history.h  api_upload.cc  api_upload.h  api_user_info.cc  api_user_info.h
backend/video_/base/: common.h  config_read.cc  config_read.h  file_info.cc  file_info.h  http_layer.cc  http_layer.h  mysqlconn.cc  mysqlconn.h  net_event_loop.cc  net_event_loop.h  net_socket.cc  net_socket.h  py_script.cc  py_script.h  thread_pool.cc  thread_pool.h
code-main/qtCode-test1/ProAVV/: ProAVV.pro  aav_main_view.h  aav_uploadfile.cpp  aav_uploadfile.h  aav_uploadselect.h  aav_uploadselect.ui  aav_usrpage.cpp  aav_videodisplay.h  aav_videodisplay.ui  aav_videolist.cpp  aav_videolist.h  aav_widgetvlume.cpp  (+2 more)
qtCode/ProAVV/: 01_theme.qss  02_theme.qss  ProAVV.pro  ProAVV.pro.user.53ff3c2  ProAVV.pro.user.53ff3c2.4.10-pre1  ProAVV.pro.user.5f24f45  ProAVV.pro.user.5f24f45.22  ProAVV.pro.user.CvIccq  ProAVV.pro.user.NYxPPY  ProAVV.pro.user.VxKZIN  ProAVV.pro.user.gJUzcf  ProAVV.pro.user.kgKQFC  ProAVV.pro.user.otUBAQ  ProAVV.pro.user.qVIJKX  ProAVV.pro.user.vKfohT  ProAVV.pro.user.xjcMAU  aav_lineeditsearch.cpp  aav_lineeditsearch.h  aav_listwidget.cpp  aav_main_view.cpp  aav_main_view.h  aav_main_view.ui  aav_networkmanager.cpp  aav_networkmanager.h  aav_networkthread.cpp  aav_networkthread.h  aav_totips.cpp  aav_totips.h  aav_totips.ui  aav_uploadfile.cpp  aav_uploadfile.h  aav_uploadfile.ui  aav_uploadselect.cpp  aav_userlogin.cpp  aav_userlogin.h  aav_userlogin.ui  aav_userloginandregis.cpp  aav_userloginandregis.h  aav_userloginandregis.ui  aav_usermanager.cpp  (+35 more)
qtCode/build-ProAVV-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.ProAVV.Debug  object_script.ProAVV.Release  ui_aav_main_view.h  ui_aav_uploadfile.h  ui_aav_uploadselect.h  ui_aav_userlogin.h  ui_aav_userloginandregis.h  ui_aav_userregister.h  ui_aav_usrpage.h  ui_aav_videocoverwidget.h  ui_aav_videocoverwidlistloop.h  ui_aav_videodisplay.h  ui_aav_videolist.h  ui_avv_main_view.h  ui_usrpage.h  ui_videodisplay.h  ui_videolist.h
qtCode/build-ProAVV-unknown-Debug/: Makefile  moc_aav_lineeditsearch.cpp  moc_aav_listwidget.cpp  moc_aav_main_view.cpp  moc_aav_networkmanager.cpp  moc_aav_totips.cpp  moc_aav_uploadfile.cpp  moc_aav_uploadselect.cpp  moc_aav_userlogin.cpp  moc_aav_userloginandregis.cpp  moc_aav_usermanager.cpp  moc_aav_userregister.cpp  moc_aav_usrpage.cpp  moc_aav_videocoverwidget.cpp  moc_aav_videocoverwidlistloop.cpp  moc_aav_videodisplay.cpp  moc_aav_videolist.cpp  moc_aav_volumebutton.cpp  moc_aav_widgetvlume.cpp  qrc_src.cpp  ui_aav_main_view.h  ui_aav_totips.h  ui_aav_uploadfile.h  ui_aav_uploadselect.h  ui_aav_userlogin.h  ui_aav_userloginandregis.h  ui_aav_userregister.h  ui_aav_usrpage.h  ui_aav_videocoverwidget.h  ui_aav_videocoverwidlistloop.h  ui_aav_videodisplay.h  ui_aav_videolist.h
(+28 files in other folders)
